--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             <li><a href="https://hellharbor.com/touring-and-tickets.html">TICKETS</a></li>
           </nav>
     </section>
+
+    <section id="conntent">
+        <<iframe width="600" height="320" src="https://www.youtube.com/embed/nUSb8A_fi40?si=boDH8i5t3D9AnZbC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </section>
+
     <section id="about">
         <h2>About JesterTheRyda</h2>
         <p>Jordin Bryant, known professionally as JesterTheRyda is an American actor, director, musician, record producer, and voiceover artist from Grays Harbor County, WA.  He the founder  and Chief Executive Officer of Hell Harbor Entertainment. As a troubled youth who dropped out of school when he was a teenager, he devoted himself to pursuing various forms of the craft to entertain the world. </p>
