--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
 
     <section id="conntent">
-        <<iframe width="600" height="320" src="https://www.youtube.com/embed/nUSb8A_fi40?si=boDH8i5t3D9AnZbC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <<iframe width="600" height="320" src="https://www.youtube.com/embed/nUSb8A_fi40?si=boDH8i5t3D9AnZbC?autoplay=1" title="For The Juggs Lyric Video" frameborder="0" allow="accelerometer; autoplay"; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </section>
 
     <section id="about">
