--- a/music.html
+++ b/music.html
@@ -67,7 +67,6 @@
     <a href="https://nav.JesterTheRyda.com/i-still-exist" class="btn">I Still Exist</a>
 </section>
 
-
 <section id="featured">
   <h2>JesterTheRyda Is Also Featured On:</h2>
   <p>Check out these dope ass projects out, I only work with badass artists!</p>
@@ -85,7 +84,7 @@
   <img src="images/cover-fabch.png" alt="Feeding A Beast Called Hate" style="width: 300px; height: 300px;">
   <h2>Feeding a Beast Called Hate - Poltergyst</h2>
   <p></p>
-  <a href="https://nav.JesterTheRyda.com/fabch" class="btn">Feeding A Beast Called Hate</a>
+  <a href="https://nav.ThePoltergyst.com/fabch" class="btn">Feeding A Beast Called Hate</a>
 </section>
     
     <footer>
