--- a/links.html
+++ b/links.html
@@ -52,22 +52,27 @@
       </nav>
     </section>
 
-<section id="social-media">
+  <section id="socials">
     <h2>JesterTheRyda Social Media & Important Links</h2>
     <a href="https://nav.JesterTheRyda.com/bandsintown" class="btn">BandsInTown</a>
     <a href="https://nav.JesterTheRyda.com/discord" class="btn">Discord</a>
     <a href="https://nav.JesterTheRyda.com/facebook" class="btn">Facebook</a>
     <a href="https://nav.JesterTheRyda.com/instagram" class="btn">Instagram</a>
-    <a href="https://nav.JesterTheRyda.com/kofi" class="btn">Ko-Fi</a>
     <a href="https://nav.JesterTheRyda.com/reddit" class="btn">Reddit</a>
     <a href="https://nav.JesterTheRyda.com/snapchat" class="btn">SnapChat </a>
+    <a href="https://nav.JesterTheRyda.com/twitter" class="btn">X</a>
+  </section>
+
+  <section id="content">
+    <h2>JesterTheRyda Content Links</h2>
+    <a href="https://nav.JesterTheRyda.com/apple" class="btn">Apple</a>
+    <a href="https://nav.JesterTheRyda.com/kofi" class="btn">Ko-Fi</a>
     <a href="https://nav.JesterTheRyda.com/soundcloud" class="btn">SoundCloud</a>
     <a href="https://nav.JesterTheRyda.com/spotify" class="btn">Spotify</a>
     <a href="https://nav.JesterTheRyda.com/tiktok" class="btn">TikTok</a>
     <a href="https://nav.JesterTheRyda.com/twitch" class="btn">Twitch</a>
-    <a href="https://nav.JesterTheRyda.com/twitter" class="btn">Twitter (X)</a>
     <a href="https://nav.JesterTheRyda.com/youtube" class="btn">YouTube </a>
-</section>
+  </section>
   
     <footer>
         <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
