--- a/links.html
+++ b/links.html
@@ -59,8 +59,8 @@
     <a href="https://nav.JesterTheRyda.com/facebook" class="btn">Facebook</a>
     <a href="https://nav.JesterTheRyda.com/instagram" class="btn">Instagram</a>
     <a href="https://nav.JesterTheRyda.com/reddit" class="btn">Reddit</a>
-    <a href="https://nav.JesterTheRyda.com/snapchat" class="btn">SnapChat </a>
-    <a href="https://nav.JesterTheRyda.com/twitter" class="btn">X</a>
+    <a href="https://nav.JesterTheRyda.com/snapchat" class="btn">SnapChat</a>
+    <a href="https://nav.JesterTheRyda.com/twitter" class="btn"></a>
   </section>
 
   <section id="content">
