--- a/links.html
+++ b/links.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="The official website for the most raw & uncensored Jester in the world! JesterTheRyda is an independent actor and musician signed to Dab & Stab Records / Hell Harbor Entertainment">
+    <meta name="description" content="Official website for JesterTheRyda, actor, and musician signed to Dab & Stab Records / Hell Harbor Entertainment. Raw & uncensored content.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JesterTheRyda</title>
     <link rel="stylesheet" href="index.css">
-    <script src="node_modules/showdown/dist/showdown.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
     <style>
         /* Custom CSS styles */
-        header img { 
-          margin-bottom: 10px;
+        header img {
+            margin-bottom: 10px;
         }
+
         .content {
-          color: white; /* Change to the desired text color */;
-          list-style-position: outside;
-          text-align: center;
+            color: white;
+            /* Change to the desired text color */
+            list-style-position: outside;
+            text-align: center;
         }
 
         .content :link {
-          color: red !important;
+            color: red !important;
         }
 
         .content img {
-      max-width: 100%;
-      max-height: 200px; /* Adjust the desired height */
-    }
-      </style>
-  <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
+            max-width: 100%;
+            max-height: 200px;
+            /* Adjust the desired height */
+        }
+    </style>
 </head>
+
 <body>
     <header>
         <img src="logo_main.png" alt="JTR Logo" style="width: 200px; height: 200px;">
@@ -40,44 +44,46 @@
     <div class="divider"></div>
 
     <section id="navmenu">
-      <nav>
-        <li><a href="https://JesterTheRyda.com/index.html">HOME</a></li>
-        <li><a href="https://JesterTheRyda.com/contact.html">CONTACT</a></li>
-        <li><a href="https://JesterTheRyda.com/links.html">LINKS</a></li>
-        <li><a href="https://JesterTheRyda.com/lore.html">LORE</a></li>
-        <li><a href="https://JesterTheRyda.com/music.html">MUSIC</a></li>
-        <li><a href="https://JesterTheRyda.com/shop.html">SHOP</a></li>
-        <li><a href="https://JesterTheRyda.com/shows.html">SHOWS</a></li>
-        <li><a href="https://hellharbor.com/touring-and-tickets.html">TICKETS</a></li>
-      </nav>
+        <nav>
+            <ul>
+                <li><a href="https://JesterTheRyda.com/index.html" target="_blank">HOME</a></li>
+                <li><a href="https://JesterTheRyda.com/contact.html" target="_blank">CONTACT</a></li>
+                <li><a href="https://JesterTheRyda.com/links.html" target="_blank">LINKS</a></li>
+                <li><a href="https://JesterTheRyda.com/lore.html" target="_blank">LORE</a></li>
+                <li><a href="https://JesterTheRyda.com/music.html" target="_blank">MUSIC</a></li>
+                <li><a href="https://JesterTheRyda.com/shop.html" target="_blank">SHOP</a></li>
+                <li><a href="https://JesterTheRyda.com/shows.html" target="_blank">SHOWS</a></li>
+                <li><a href="https://hellharbor.com/touring-and-tickets.html" target="_blank">TICKETS</a></li>
+            </ul>
+        </nav>
     </section>
 
-  <section id="socials">
-    <h2>JesterTheRyda Social Media & Important Links</h2>
-    <a href="https://nav.JesterTheRyda.com/bandsintown" class="btn">BandsInTown</a>
-    <a href="https://nav.JesterTheRyda.com/discord" class="btn">Discord</a>
-    <a href="https://nav.JesterTheRyda.com/facebook" class="btn">Facebook</a>
-    <a href="https://nav.JesterTheRyda.com/instagram" class="btn">Instagram</a>
-    <a href="https://nav.JesterTheRyda.com/reddit" class="btn">Reddit</a>
-    <a href="https://nav.JesterTheRyda.com/snapchat" class="btn">SnapChat</a>
-    <a href="https://nav.JesterTheRyda.com/twitter" class="btn"></a>
-  </section>
+    <section id="socials">
+        <h2>JesterTheRyda Social Media & Important Links</h2>
+        <a href="https://nav.JesterTheRyda.com/bandsintown" class="btn" target="_blank">BandsInTown</a>
+        <a href="https://nav.JesterTheRyda.com/discord" class="btn" target="_blank">Discord</a>
+        <a href="https://nav.JesterTheRyda.com/facebook" class="btn" target="_blank">Facebook</a>
+        <a href="https://nav.JesterTheRyda.com/instagram" class="btn" target="_blank">Instagram</a>
+        <a href="https://nav.JesterTheRyda.com/reddit" class="btn" target="_blank">Reddit</a>
+        <a href="https://nav.JesterTheRyda.com/snapchat" class="btn" target="_blank">SnapChat</a>
+        <a href="https://nav.JesterTheRyda.com/twitter" class="btn" target="_blank">X</a>
+    </section>
 
-  <section id="content">
-    <h2>JesterTheRyda Content Links</h2>
-    <a href="https://nav.JesterTheRyda.com/apple" class="btn">Apple</a>
-    <a href="https://nav.JesterTheRyda.com/kofi" class="btn">Ko-Fi</a>
-    <a href="https://nav.JesterTheRyda.com/soundcloud" class="btn">SoundCloud</a>
-    <a href="https://nav.JesterTheRyda.com/spotify" class="btn">Spotify</a>
-    <a href="https://nav.JesterTheRyda.com/tiktok" class="btn">TikTok</a>
-    <a href="https://nav.JesterTheRyda.com/twitch" class="btn">Twitch</a>
-    <a href="https://nav.JesterTheRyda.com/youtube" class="btn">YouTube </a>
-  </section>
-  
+    <section id="content">
+        <h2>JesterTheRyda Content Links</h2>
+        <a href="https://nav.JesterTheRyda.com/apple" class="btn" target="_blank">Apple</a>
+        <a href="https://nav.JesterTheRyda.com/kofi" class="btn" target="_blank">Ko-Fi</a>
+        <a href="https://nav.JesterTheRyda.com/soundcloud" class="btn" target="_blank">SoundCloud</a>
+        <a href="https://nav.JesterTheRyda.com/spotify" class="btn" target="_blank">Spotify</a>
+        <a href="https://nav.JesterTheRyda.com/tiktok" class="btn" target="_blank">TikTok</a>
+        <a href="https://nav.JesterTheRyda.com/twitch" class="btn" target="_blank">Twitch</a>
+        <a href="https://nav.JesterTheRyda.com/youtube" class="btn" target="_blank">YouTube </a>
+    </section>
+
     <footer>
         <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
     </footer>
 
 </body>
-</html>
 
+</html>
