--- a/contact.html
+++ b/contact.html
@@ -77,15 +77,27 @@
 
 <div class="divider"></div>
 
+<section id="social">
+  <h2>Follow JesterTheRyda On Social Media</h2>=
+  <a href="https://nav.JesterTheRyda.com/bandsintown" class="btn" target="_blank">BandsInTown</a>
+  <a href="https://nav.JesterTheRyda.com/discord" class="btn" target="_blank">Discord</a>
+  <a href="https://nav.JesterTheRyda.com/facebook" class="btn" target="_blank">Facebook</a>
+  <a href="https://nav.JesterTheRyda.com/instagram" class="btn" target="_blank">Instagram</a>
+  <a href="https://nav.JesterTheRyda.com/reddit" class="btn" target="_blank">Reddit</a>
+  <a href="https://nav.JesterTheRyda.com/snapchat" class="btn" target="_blank">SnapChat</a>
+  <a href="https://nav.JesterTheRyda.com/twitter" class="btn" target="_blank">X</a>
+</section>
+
+
 <section id="jtr-discord">
     <h2>Join The #RydaGang Discord Server!</h2>
-    <p>Insert Info Here</p>
-    <a href="https://hellharbor.com/discord" class="btn">Click To Join The #RydaGang Discord Server</a>
+    <p>The #RydaGang Discord is the official hub for all things JesterTheRyda related! You will find all kinds of exclusive stuff here including behind the scenes announcements, hangout and streaming channels, and much more! Connect directly with the man in the cap with bells on it today by clicking below!</p>
+    <a href="https://nav.JesterTheRyda.com/discord" class="btn">Click To Join The #RydaGang Discord Server</a>
 </section>
 
 <section id="hhe-discord">
     <h2>Join The Hell Harbor Discord Server!</h2>
-<p>Insert Info Here</p>
+<p>The Hell Harbor Entertainment Discord Server is the official virtual office environment for the company. Our office is open to the public and seamlessly integrates fan engagement with business operations. The public access area of the discord serves as a vibrant space for fans to connect with the Hell Harbor team, offering exclusive news updates and a direct line to the company through the Discord Ticket System—an efficient mode for business inquiries. This innovative approach not only fosters a direct connection with the public but also exemplifies Hell Harbor Entertainment's commitment to transparent and efficient communication. Within this shared space, fans can participate in real-time conversations with various branches of Hell Harbor Entertainment (including Dab & Stab Records and Infamous Development Studios personnel), creating a unique bridge between the audience and the creative forces behind the scenes.</p>
 <a href="https://hellharbor.com/discord" class="btn">Click To Join The Hell Harbor Discord Server</a>
 </section>
 
