--- a/links.html
+++ b/links.html
@@ -58,19 +58,6 @@
         </nav>
     </section>
 
-    <section id="socials">
-      <h2>JesterTheRyda Social Media & Important Links</h2>
-      <ul>
-        <a href="https://nav.JesterTheRyda.com/bandsintown" class="btn" target="_blank">BandsInTown</a>
-        <a href="https://nav.JesterTheRyda.com/discord" class="btn" target="_blank">Discord</a>
-        <a href="https://nav.JesterTheRyda.com/facebook" class="btn" target="_blank">Facebook</a>
-        <a href="https://nav.JesterTheRyda.com/instagram" class="btn" target="_blank">Instagram</a>
-        <a href="https://nav.JesterTheRyda.com/reddit" class="btn" target="_blank">Reddit</a>
-        <a href="https://nav.JesterTheRyda.com/snapchat" class="btn" target="_blank">SnapChat</a>
-        <a href="https://nav.JesterTheRyda.com/twitter" class="btn" target="_blank">X</a>
-      </ul>
-    </section>
-
     <section id="content">
         <h2>JesterTheRyda Content Links</h2>
         <a href="https://nav.JesterTheRyda.com/apple" class="btn" target="_blank">Apple</a>
@@ -81,6 +68,17 @@
         <a href="https://nav.JesterTheRyda.com/twitch" class="btn" target="_blank">Twitch</a>
         <a href="https://nav.JesterTheRyda.com/youtube" class="btn" target="_blank">YouTube </a>
     </section>
+
+    <section id="social">
+      <h2>JesterTheRyda Social Media & Important Links</h2>
+      <a href="https://nav.JesterTheRyda.com/bandsintown" class="btn" target="_blank">BandsInTown</a>
+      <a href="https://nav.JesterTheRyda.com/discord" class="btn" target="_blank">Discord</a>
+      <a href="https://nav.JesterTheRyda.com/facebook" class="btn" target="_blank">Facebook</a>
+      <a href="https://nav.JesterTheRyda.com/instagram" class="btn" target="_blank">Instagram</a>
+      <a href="https://nav.JesterTheRyda.com/reddit" class="btn" target="_blank">Reddit</a>
+      <a href="https://nav.JesterTheRyda.com/snapchat" class="btn" target="_blank">SnapChat</a>
+      <a href="https://nav.JesterTheRyda.com/twitter" class="btn" target="_blank">X</a>
+  </section>
 
     <footer>
         <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
