--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 <div class="divider"></div>
 
 <section id="social">
-  <h2>Follow JesterTheRyda On Social Media</h2>=
+  <h2>Follow JesterTheRyda On Social Media</h2>
   <a href="https://nav.JesterTheRyda.com/bandsintown" class="btn" target="_blank">BandsInTown</a>
   <a href="https://nav.JesterTheRyda.com/discord" class="btn" target="_blank">Discord</a>
   <a href="https://nav.JesterTheRyda.com/facebook" class="btn" target="_blank">Facebook</a>
