--- a/links.html
+++ b/links.html
@@ -51,7 +51,7 @@
                 <li><a href="https://JesterTheRyda.com/links.html" target="_blank">LINKS</a></li>
                 <li><a href="https://JesterTheRyda.com/lore.html" target="_blank">LORE</a></li>
                 <li><a href="https://JesterTheRyda.com/music.html" target="_blank">MUSIC</a></li>
-                <li><a href="https://JesterTheRyda.com/shop.html" target="_blank">SHOP</a></li>
+                <li><a href="https://hellharbor.com/shop.html" target="_blank">SHOP</a></li>
                 <li><a href="https://JesterTheRyda.com/shows.html" target="_blank">SHOWS</a></li>
                 <li><a href="https://hellharbor.com/touring-and-tickets.html" target="_blank">TICKETS</a></li>
             </ul>
