--- a/lore.html
+++ b/lore.html
@@ -46,7 +46,7 @@
         <li><a href="https://JesterTheRyda.com/links.html">LINKS</a></li>
         <li><a href="https://JesterTheRyda.com/lore.html">LORE</a></li>
         <li><a href="https://JesterTheRyda.com/music.html">MUSIC</a></li>
-        <li><a href="https://JesterTheRyda.com/shop.html">SHOP</a></li>
+        <li><a href="https://hellharbor.com/shop.html">SHOP</a></li>
         <li><a href="https://JesterTheRyda.com/shows.html">SHOWS</a></li>
         <li><a href="https://hellharbor.com/touring-and-tickets.html">TICKETS</a></li>
       </nav>
