--- a/index.html
+++ b/index.html
@@ -31,10 +31,6 @@
           </nav>
     </section>
 
-    <section id="conntent">
-        <<iframe width="600" height="320" src="https://www.youtube.com/embed/nUSb8A_fi40?si=boDH8i5t3D9AnZbC?autoplay=1" title="For The Juggs Lyric Video" frameborder="0" allow="accelerometer; autoplay"; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-      </section>
-
     <section id="about">
         <h2>About JesterTheRyda</h2>
         <p>Jordin Bryant, known professionally as JesterTheRyda is an American actor, director, musician, record producer, and voiceover artist from Grays Harbor County, WA.  He the founder  and Chief Executive Officer of Hell Harbor Entertainment. As a troubled youth who dropped out of school when he was a teenager, he devoted himself to pursuing various forms of the craft to entertain the world. </p>
@@ -43,6 +39,14 @@
         <p>In addition to the music, Jester is an established  screen actor, and is featured as an extra in the upcoming indie movie GRAYPORT. Jester is also a talented voice actor and has created several of his own characters of which he portrays in Grand Theft Auto 5 and Red Dead Redemption 2 roleplay servers. He has previously been in high profile popular communities such as DOJRP, OCRP,  Twitch RP and Wild RP!  These communities are where he has honed his improvisational skills and voice acting with natural storytelling through his characters. When not acting or working on creating killer music, he actually enjoys developing and programming his own private game servers and eventually intends to create his own wicked video games one day.  </p>
         <p>Jester is from a small town in the State  of Washington, he loves to smoke weed and play video games when he is not in the studio working on his own projects or executive producing for other artists signed to the label. Underneath all the craziness is just your average guy. Now as he approaches his mid-twenties he has entered his absolute prime with his wicked style of underground entertainment as he continues to work on new projects. </p>
     </section>
+
+    <section id="conntent">
+        <h2>Check Out This Lyric Video!</h2>
+        <iframe width="560" height="320" src="https://www.youtube.com/embed/nUSb8A_fi40?si=boDH8i5t3D9AnZbC?autoplay=1" title="For The Juggs Lyric Video" frameborder="0" allow="accelerometer; autoplay"; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p>For The Juggs [prod. RydaGangProd]</p>
+        <p>Written & Performed By: JesterTheRyda</p>
+        <p>Off Of The Album: "I Still Exist (2023)"</p>
+      </section>
     
     <footer>
         <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
