Navigation Fix + Ads.txt

--- a/music.html
+++ b/music.html
@@ -64,7 +64,7 @@
     <img src="images/cover-istillexist.png" alt="I Still Exist" style="width: 300px; height: 300px;">
     <h2>I Still Exist</h2>
     <p></p>
-    <a href="https://nav.JesterTheRyda.com/i-still-exist" class="btn">I Still Exist</a>
+    <a href="https://nav.DabNStabRecords.com/istillexist" class="btn">I Still Exist</a>
 </section>
 
 <section id="featured">
@@ -74,7 +74,7 @@
   <img src="images/cover-prelude.png" alt="Prelude to the Soundtracks" style="width: 300px; height: 300px;">
   <h2>Prelude to the Soundtracks - Poltergyst</h2>
   <p></p>
-  <a href="https://nav.JesterTheRyda.com/prelude" class="btn">Prelude to the Soundtracks</a>
+  <a href="https://nav.ThePoltergyst.com/prelude" class="btn">Prelude to the Soundtracks</a>
   <div class="divider"></div>
   <img src="images/cover-vibehigh.png" alt="Vibe High" style="width: 300px; height: 300px;">
   <h2>Vibe High - Funky Skunky</h2>
