--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,8 @@
     }
       </style>
   <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629809203260686"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
