--- a/links.html
+++ b/links.html
@@ -8,6 +8,8 @@
     <title>JesterTheRyda</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629809203260686"
+     crossorigin="anonymous"></script>
     <style>
         /* Custom CSS styles */
         header img {
