--- a/lore.html
+++ b/lore.html
@@ -7,6 +7,8 @@
     <title>JesterTheRyda</title>
     <link rel="stylesheet" href="index.css">
     <script src="node_modules/showdown/dist/showdown.min.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629809203260686"
+     crossorigin="anonymous"></script>
     <style>
         /* Custom CSS styles */
         header img { 
@@ -75,7 +77,6 @@
           console.error('Error:', error);
         });
     </script>
-    
     
     <footer>
         <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
