Fixed Typo / EP Image

--- a/music.html
+++ b/music.html
@@ -68,7 +68,7 @@
     <p></p>
     <a href="https://nav.DabNStabRecords.com/istillexist" class="btn">I Still Exist</a>
     <div class="divider"></div>
-    <img src="images/cover-mobtster.png" alt="Mobster Moves" style="width: 300px; height: 300px;">
+    <img src="images/cover-mobster.png" alt="Mobster Moves" style="width: 300px; height: 300px;">
     <h2>Mobster Moves</h2>
     <p></p>
     <a href="https://nav.JesterTheRyda.com/mobster-moves" class="btn">Mobster Moves</a>
