--- a/stream.html
+++ b/stream.html
@@ -33,7 +33,7 @@
           </nav>
     </section>
 
-    <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;"><iframe src="https://player.twitch.tv/?channel=jestertheryda&autoplay=false&parent=JesterTheRyda.com&parent=JesterTheRyda.com/stream.html&parent=JesterTheRyda.com/stream&parent=iframe.ly&parent=cdn.iframe.ly&parent=iframely.net&parent=iframely.com&parent=if-cdn.com" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe></div>
+    <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;"><iframe src="https://player.twitch.tv/JesterTheRyda?_parent=JesterTheRyda.com%2C+JesterTheRyda.com%2Fstream.html%2C+JesterTheRyda.com%2Fstream" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe></div>
     
     <footer>
         <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
