--- a/tweets.html
+++ b/tweets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="The official website for the most raw & uncensored Jester in the world! JesterTheRyda is an independent actor and musician signed to Dab & Stab Records / Hell Harbor Entertainment">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JesterTheRyda Live Stream</title>
+    <title>JesterTheRyda</title>
     <link rel="stylesheet" href="index.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629809203260686"
      crossorigin="anonymous"></script>
@@ -32,8 +32,16 @@
             <li><a href="https://hellharbor.com/touring-and-tickets.html">TICKETS</a></li>
           </nav>
     </section>
+    
+    <section id="twitter">
+        <h1>JesterTheRyda's Twitter Feed</h1>
+        <p>I like talking shit on the internet, check out my twitter feed and see!</p>
+        </h1>
+        <div align="center"><a class="twitter-timeline" data-width="600" data-dnt="true"  data-tweet-limit="4" data-theme="dark" href="https://twitter.com/JesterTheRyda?ref_src=twsrc%5Etfw">Tweets by JesterTheRyda</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+    </section>
 
-    <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;"><iframe src="https://player.twitch.tv/?channel=jestertheryda&autoplay=false&parent=JesterTheRyda.com&parent=JesterTheRyda.com/stream.html&parent=JesterTheRyda.com/stream&parent=iframe.ly&parent=cdn.iframe.ly&parent=iframely.net&parent=iframely.com&parent=if-cdn.com" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe></div>
     
     <footer>
         <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
