--- a/stream.html
+++ b/stream.html
@@ -6,22 +6,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JesterTheRyda Live Stream</title>
     <link rel="stylesheet" href="index.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629809203260686"
-     crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629809203260686" crossorigin="anonymous"></script>
+
+    <style>
+        body {
+            margin: 0;
+            background: #000;
+            color: #fff;
+            font-family: sans-serif;
+        }
+
+        header {
+            text-align: center;
+            padding: 20px;
+        }
+
+        header img {
+            width: 200px;
+            height: 200px;
+        }
+
+        #navmenu nav {
+            background: #111;
+            text-align: center;
+        }
+
+        #navmenu ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: inline-flex;
+            flex-wrap: wrap;
+        }
+
+        #navmenu li {
+            margin: 0;
+        }
+
+        #navmenu a {
+            display: block;
+            padding: 10px 15px;
+            color: #fff;
+            text-decoration: none;
+        }
+
+        #navmenu a:hover {
+            background: #333;
+        }
+
+        .divider {
+            height: 2px;
+            background: #444;
+            margin: 10px 0;
+        }
+
+        .stream-container {
+            display: flex;
+            flex-direction: row;
+            height: 80vh;
+            max-height: 900px;
+        }
+
+        .player {
+            flex: 3;
+        }
+
+        .chat {
+            flex: 1;
+            min-width: 300px;
+        }
+
+        .player iframe,
+        .chat iframe {
+            border: none;
+            width: 100%;
+            height: 100%;
+            display: block;
+        }
+
+        @media (max-width: 800px) {
+            .stream-container {
+                flex-direction: column;
+                height: auto;
+            }
+            .chat {
+                height: 400px;
+            }
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #111;
+            font-size: 0.9em;
+        }
+    </style>
 </head>
 <body>
 
-    <header>
-        <img src="logo_main.png" alt="JTR Logo" style="width: 200px; height: 200px;">
-        <h1>Welcome To Jester's Funhouse</h1>
-        <h2>Home Of The RydaGang</h2>
-        <p></p>
-    </header>
+<header>
+    <img src="logo_main.png" alt="JTR Logo">
+    <h1>Welcome To Jester's Funhouse</h1>
+    <h2>Home Of The RydaGang</h2>
+</header>
 
-    <div class="divider"></div>
+<div class="divider"></div>
 
-    <section id="navmenu">
-        <nav>
+<section id="navmenu">
+    <nav>
+        <ul>
             <li><a href="https://JesterTheRyda.com/index.html">HOME</a></li>
             <li><a href="https://JesterTheRyda.com/contact.html">CONTACT</a></li>
             <li><a href="https://JesterTheRyda.com/links.html">LINKS</a></li>
@@ -30,15 +123,30 @@
             <li><a href="https://hellharbor.com/shop.html">SHOP</a></li>
             <li><a href="https://JesterTheRyda.com/shows.html">SHOWS</a></li>
             <li><a href="https://hellharbor.com/touring-and-tickets.html">TICKETS</a></li>
-          </nav>
-    </section>
+        </ul>
+    </nav>
+</section>
 
-    <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;"><iframe src="https://player.twitch.tv/?channel=jestertheryda&autoplay=false&parent=JesterTheRyda.com&parent=JesterTheRyda.com/stream.html&parent=JesterTheRyda.com/stream&parent=iframe.ly&parent=cdn.iframe.ly&parent=iframely.net&parent=iframely.com&parent=if-cdn.com" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe></div>
-    
-    <footer>
-        <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
-    </footer>
+<div class="divider"></div>
+
+<!-- Twitch Player + Chat -->
+<div class="stream-container">
+    <div class="player">
+        <iframe
+            src="https://player.twitch.tv/?channel=JesterTheRyda&parent=www.jestertheryda.com"
+            allowfullscreen>
+        </iframe>
+    </div>
+    <div class="chat">
+        <iframe
+            src="https://www.twitch.tv/embed/JesterTheRyda/chat?parent=www.jestertheryda.com">
+        </iframe>
+    </div>
+</div>
+
+<footer>
+    <p>&copy; 2018-2025 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
+</footer>
 
 </body>
 </html>
-
