--- a/stream.html
+++ b/stream.html
@@ -54,13 +54,6 @@
             background-color: #444;
         }
 
-        .divider {
-            width: 100%;
-            height: 2px;
-            background: linear-gradient(to right, #ff0000, #ff8800, #ffff00);
-            margin-bottom: 10px;
-        }
-
         .stream-container {
             max-width: 1000px;
             margin: 20px auto;
@@ -131,7 +124,7 @@
         </div>
         <div class="chat">
             <iframe
-                src="https://www.twitch.tv/embed/jestertheryda/chat?parent=jestertheryda.com&parent=www.jestertheryda.com">
+                src="https://www.twitch.tv/embed/jestertheryda/chat?parent=jestertheryda.com&parent=www.jestertheryda.com&darkpopout">
             </iframe>
         </div>
     </div>
