--- a/stream.html
+++ b/stream.html
@@ -6,20 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JesterTheRyda Live Stream</title>
     <link rel="stylesheet" href="index.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629809203260686"
-     crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629809203260686" crossorigin="anonymous"></script>
     <style>
         body {
             margin: 0;
-            background-color: #000;
+            background-color: #000; /* page black */
             color: #fff;
             font-family: Arial, sans-serif;
             text-align: center;
         }
 
+        /* Header and Nav inherit styles from index.css */
         header {
             padding: 20px;
-            background-color: #111;
         }
 
         header img {
@@ -30,7 +29,6 @@
         #navmenu nav {
             display: flex;
             justify-content: center;
-            background-color: #222;
             flex-wrap: wrap;
             list-style: none;
             padding: 0;
@@ -51,9 +49,10 @@
         }
 
         #navmenu nav a:hover {
-            background-color: #444;
+            background-color: #444; /* optional hover effect */
         }
 
+        /* Twitch Stream + Chat Container */
         .stream-container {
             max-width: 1000px;
             margin: 20px auto;
@@ -76,7 +75,7 @@
 
         @media (max-width: 768px) {
             .player iframe {
-                height: 56.25vw; /* Responsive 16:9 */
+                height: 56.25vw; /* responsive 16:9 */
             }
             .chat iframe {
                 height: 300px;
@@ -84,8 +83,6 @@
         }
 
         footer {
-            background-color: #111;
-            color: #aaa;
             padding: 15px;
             margin-top: 20px;
             font-size: 14px;
@@ -99,8 +96,6 @@
         <h1>Welcome To Jester's Funhouse</h1>
         <h2>Home Of The RydaGang</h2>
     </header>
-
-    <div class="divider"></div>
 
     <section id="navmenu">
         <nav>
