--- a/epk.html
+++ b/epk.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="The official website for the most raw & uncensored Jester in the world! JesterTheRyda is an independent actor and musician signed to Dab & Stab Records / Hell Harbor Entertainment">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JesterTheRyda</title>
+    <title>JesterTheRyda - Electronic Press Kit</title>
     <link rel="stylesheet" href="index.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629809203260686"
      crossorigin="anonymous"></script>
@@ -34,9 +34,23 @@
           </nav>
     </section>
     
-    <section id="404">
-        <h1>Oh crap! Looks like this page can't be found.</h1>
-        <h2>A development demon will probably fix this soon, so check again later.</h2>
+    <section id="info">
+        <h1>Official Electronic Press Kit for JesterTheRyda</h1>
+        <p>This is the official Electronic Press Kit for JesterTheRyda. It contains a compilation of various easily accessible official JesterTheRyda content for promoters and booking agents to review.</p>
+        <p></p>
+        <div class="divider"></div>
+        <h3>Booking & Press Contact Info</h3>
+        <p>Thanks for your interest in booking! JesterTheRyda can't wait to get to work, but before they can do that, you gotta reach out to the Hell Harbor Entertainment / Dab & Stab Records Booking Department and take care of a little bit of business negotiations and some paperwork behind the scenes.</p>
+        <h4>Reach out to us via email to initiate the booking process.</h4>
+        <p>For all music bookings email: "booking@DabNStabRecords.com"</p>
+        <p>For all screen acting bookings email: "screenbooking@HellHarbor.com"</p>
+        <p>For all voice acting bookings email: "voicebooking@HellHarbor.com"</p>
+        <h3>Live Performance Footage</h3>
+        <p>Coming Soon</p>
+        <h3>Music Streaming Links</h3>
+        <a href="https://JesterTheRyda.com/music" class="btn" target="_blank">MUSIC DISCOGRAPHY</a>
+        <h3>Press Releases</h3>
+        <a href="https://JesterTheRyda.com/404" class="btn" target="_blank">CURRENTLY UNAVAILABLE</a>
     </section>
 
     
