--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="https://JesterTheRyda.com/music.html">MUSIC</a></li>
             <li><a href="https://hellharbor.com/shop.html">SHOP</a></li>
             <li><a href="https://JesterTheRyda.com/shows.html">SHOWS</a></li>
+            <li><a href="https://JesterTheRyda.com/stream.html">STREAM</a></li>
             <li><a href="https://hellharbor.com/touring-and-tickets.html">TICKETS</a></li>
           </nav>
     </section>
@@ -51,7 +52,7 @@
       </section>
     
     <footer>
-        <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
+        <p>&copy; 2018-2025 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
     </footer>
 
 </body>
