--- a/links.html
+++ b/links.html
@@ -55,6 +55,7 @@
                 <li><a href="https://JesterTheRyda.com/music.html" target="_blank">MUSIC</a></li>
                 <li><a href="https://hellharbor.com/shop.html" target="_blank">SHOP</a></li>
                 <li><a href="https://JesterTheRyda.com/shows.html" target="_blank">SHOWS</a></li>
+                <li><a href="https://JesterTheRyda.com/stream.html">STREAM</a></li>
                 <li><a href="https://hellharbor.com/touring-and-tickets.html" target="_blank">TICKETS</a></li>
             </ul>
         </nav>
@@ -83,7 +84,7 @@
   </section>
 
     <footer>
-        <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
+        <p>&copy; 2018-2025 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
     </footer>
 
 </body>
