--- a/lore.html
+++ b/lore.html
@@ -50,6 +50,7 @@
         <li><a href="https://JesterTheRyda.com/music.html">MUSIC</a></li>
         <li><a href="https://hellharbor.com/shop.html">SHOP</a></li>
         <li><a href="https://JesterTheRyda.com/shows.html">SHOWS</a></li>
+        <li><a href="https://JesterTheRyda.com/stream.html">STREAM</a></li>
         <li><a href="https://hellharbor.com/touring-and-tickets.html">TICKETS</a></li>
       </nav>
     </section>
@@ -78,8 +79,32 @@
         });
     </script>
     
+    <h1>The Fiend & Fairy Lore</h1>
+    <div class="fiend-and-fairy-lore" id="markdownContent2"></div>
+    <script>
+      function convertMarkdownToHTML(markdown) {
+        // Use a Markdown parser library like Showdown.js (https://github.com/showdownjs/showdown)
+        var converter = new showdown.Converter();
+        return converter.makeHtml(markdown);
+      }
+  
+      // Fetch the Markdown content from the URL
+      fetch('https://raw.githubusercontent.com/HellHarborEntertainment/www.JesterTheRyda.com/main/info/lore/fiend-and-fairy-details.md')
+        .then(response => response.text())
+        .then(markdown => {
+          // Convert the Markdown content to HTML
+          var html = convertMarkdownToHTML(markdown);
+  
+          // Insert the HTML content into the page
+          document.getElementById('markdownContent2').innerHTML = html;
+        })
+        .catch(error => {
+          console.error('Error:', error);
+        });
+    </script>
+    
     <footer>
-        <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
+        <p>&copy; 2018-2025 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
     </footer>
 
 </body>
