--- a/music.html
+++ b/music.html
@@ -50,6 +50,7 @@
         <li><a href="https://JesterTheRyda.com/music.html">MUSIC</a></li>
         <li><a href="https://hellharbor.com/shop.html">SHOP</a></li>
         <li><a href="https://JesterTheRyda.com/shows.html">SHOWS</a></li>
+        <li><a href="https://JesterTheRyda.com/stream.html">STREAM</a></li>
         <li><a href="https://hellharbor.com/touring-and-tickets.html">TICKETS</a></li>
       </nav>
     </section>
@@ -95,7 +96,7 @@
 </section>
     
     <footer>
-        <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
+        <p>&copy; 2018-2025 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
     </footer>
 
 </body>
