--- a/shows.html
+++ b/shows.html
@@ -50,6 +50,7 @@
         <li><a href="https://JesterTheRyda.com/music.html">MUSIC</a></li>
         <li><a href="https://hellharbor.com/shop.html">SHOP</a></li>
         <li><a href="https://JesterTheRyda.com/shows.html">SHOWS</a></li>
+        <li><a href="https://JesterTheRyda.com/stream.html">STREAM</a></li>
         <li><a href="https://hellharbor.com/touring-and-tickets.html">TICKETS</a></li>
       </nav>
     </section>
@@ -68,13 +69,11 @@
     <p>Thanks for your interest in booking! He can't wait to perform live for your event, but before he can do that, you gotta reach out to the Hell Harbor Entertainment / Dab & Stab Records Booking Department and take care of a little bit of business negotiations and some paperwork behind the scenes.</p>
     <h3>For Live Music Performances</h3>
     <p>Reach out to "booking@DabNStabRecords.com"</p>
-    
-    </h3>
     <img src="images/image-jtrpeace.png" alt="JTR Logo" style="width: 200px; height: 200px;;">
 </section>
     
     <footer>
-        <p>&copy; 2018-2024 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
+        <p>&copy; 2018-2025 HELL HARBOR ENTERTAINMENT ALL RIGHTS RESERVED</p>
     </footer>
 
 </body>
