--- a/stream.html
+++ b/stream.html
@@ -96,7 +96,7 @@
         <h1>Welcome To Jester's Funhouse</h1>
         <h2>Home Of The RydaGang</h2>
     </header>
-
+    <div class="divider"></div>
     <section id="navmenu">
         <nav>
             <li><a href="https://JesterTheRyda.com/index.html">HOME</a></li>
@@ -106,6 +106,7 @@
             <li><a href="https://JesterTheRyda.com/music.html">MUSIC</a></li>
             <li><a href="https://hellharbor.com/shop.html">SHOP</a></li>
             <li><a href="https://JesterTheRyda.com/shows.html">SHOWS</a></li>
+            <li><a href="https://JesterTheRyda.com/stream.html">STREAM</a></li>
             <li><a href="https://hellharbor.com/touring-and-tickets.html">TICKETS</a></li>
         </nav>
     </section>
